--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,15 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rajdhani:wght@300;400;500;600;700&display=swap');
 
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --title-font: "Rajdhani", sans-serif;
+  --title-font: "Rajdhani";
+  --body-font:  "Poppins", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,13 +25,32 @@
 body {
   color: #fff;
   background: #222527;
-  font-family: "Rajdhani", sans-serif;
+  font-family: var(--body-font);
   font-weight: 300;
   font-style: normal;
+}
+
+h1,h2,h3,h4,h5,h6{
+  font-family: var(--title-font);
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+/* ------------------- swiper ------------------- */
+
+.swiper-button-prev, .swiper-button-next {
+  background: #454645;
+  width: 45px !important;
+  height: 45px !important;
+  border-radius: 50%;
+  color: #45f882 !important;
+}
+
+.swiper-button-prev:after, .swiper-button-next:after {
+  font-size: 22px !important;
+  font-weight: 900 !important;
 }
