--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --title-font: "Rajdhani";
+  --title-font: "Rajdhani", sans-serif;
   --body-font:  "Poppins", sans-serif;
 }
 
